--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "selectionSort": "node -e 'require(\"./selectionSort-4-6-19\").runSelectionSort()'",
     "binarySearch": "node -e 'require(\"./binarySearch-4-6-19\").runBinarySearch()'",
     "heapSort": "node -e 'require(\"./heapSort2-4-9-19\").runHeapSort()'",
-    "insertionSort": "node -e 'require(\"./insertionSort2-4-9-19\").runInsertionSort()'"
+    "insertionSort": "node -e 'require(\"./insertionSort2-4-9-19\").runInsertionSort()'",
+    "jumpToZero": "node -e 'require(\"./jumpToZero-4-9-19\").runJumpToZero()'",
+    "yakovChain": "node -e 'require(\"./krogerInterview\").runYakovChain()'",
+    "printHello": "node -e 'require(\"./krogerInterview\").printHello()'",
+    "seniorAge": "node -e 'require(\"./krogerInterview\").seniorAge()'",
+    "curryMultiply": "node -e 'require(\"./krogerInterview\").curryMultiply()'",
+    "iifeWindow": "node -e 'require(\"./krogerInterview\").iifeWindow()'",
+    "iife": "node -e 'require(\"./krogerInterview\").iife()'",
+    "domLoaded": "node -e 'require(\"./krogerInterview\").domLoaded()'",
+    "circleArea": "node -e 'require(\"./krogerInterview\").circleArea()'"
   },
   "repository": {
     "type": "git",
