trying out interivew Cake solution

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "generateSolution": "node -e 'require(\"./helpers/generateSolution\").generateDefaultSolution()'",
+    "reverseWords": "node -e 'require(\"./challenges/reverseWords/reverseWords\").reverseWords()'",
     "bubbleSort": "node -e 'require(\"./bubbleSort-4-6-19\").bubbleSort()'",
     "mergeSort": "node -e 'require(\"./mergeSort-4-6-19\").runMergeSort()'",
     "quickSort": "node -e 'require(\"./quickSort-4-6-19\").runQuickSort()'",
