--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "ecmaVersion": 2018
     },
     "rules": {
-      "no-plusplus": [2, { "allowForLoopAfterthoughts": true }]
+      "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+      "no-continue": 0
     }
 }
