--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,6 @@
         "ecmaVersion": 2018
     },
     "rules": {
-      "no-plusplus": [2, { "allowForLoopAfterthoughts": true }]
+      "no-plusplus": 0
     }
 }
