--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "ecmaVersion": 2018
     },
     "rules": {
-      "no-plusplus": 0
+      "no-plusplus": 0,
+      "no-continue": 0
     }
 }
