--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
   "scripts": {
     "pretest": "eslint --ignore-path .gitignore .",
     "test": "jest",
-    "generateSolution": "node -e 'require(\"./helpers/generateSolution\").generateDefaultSolution()'",
-    "reverseWords": "node -e 'require(\"./challenges/reverseWords/reverseWords\").reverseWords()'",
-    "bubbleSort": "node -e 'require(\"./bubbleSort-4-6-19\").bubbleSort()'",
-    "mergeSort": "node -e 'require(\"./mergeSort-4-6-19\").runMergeSort()'",
-    "quickSort": "node -e 'require(\"./quickSort-4-6-19\").runQuickSort()'",
-    "selectionSort": "node -e 'require(\"./selectionSort-4-6-19\").runSelectionSort()'",
     "binarySearch": "node -e 'require(\"./binarySearch-4-6-19\").runBinarySearch()'",
+    "bubbleSort": "node -e 'require(\"./bubbleSort-4-6-19\").bubbleSort()'",
+    "circleArea": "node -e 'require(\"./jsOOPConcepts\").circleArea()'",
+    "curryMultiply": "node -e 'require(\"./jsOOPConcepts\").curryMultiply()'",
+    "domLoaded": "node -e 'require(\"./jsOOPConcepts\").domLoaded()'",
+    "generateSolution": "node -e 'require(\"./helpers/generateSolution\").generateDefaultSolution()'",
     "heapSort": "node -e 'require(\"./heapSort2-4-9-19\").runHeapSort()'",
+    "iife": "node -e 'require(\"./jsOOPConcepts\").iife()'",
+    "iifeWindow": "node -e 'require(\"./jsOOPConcepts\").iifeWindow()'",
     "insertionSort": "node -e 'require(\"./insertionSort2-4-9-19\").runInsertionSort()'",
     "jumpToZero": "node -e 'require(\"./jumpToZero-4-9-19\").runJumpToZero()'",
-    "yakovChain": "node -e 'require(\"./jsOOPConcepts\").runYakovChain()'",
+    "mergeSort": "node -e 'require(\"./mergeSort-4-6-19\").runMergeSort()'",
     "printHello": "node -e 'require(\"./jsOOPConcepts\").printHello()'",
+    "quickSort": "node -e 'require(\"./quickSort-4-6-19\").runQuickSort()'",
+    "reverseWords": "node -e 'require(\"./challenges/reverseWords/reverseWords\").reverseWords()'",
+    "selectionSort": "node -e 'require(\"./selectionSort-4-6-19\").runSelectionSort()'",
     "seniorAge": "node -e 'require(\"./jsOOPConcepts\").seniorAge()'",
-    "curryMultiply": "node -e 'require(\"./jsOOPConcepts\").curryMultiply()'",
-    "iifeWindow": "node -e 'require(\"./jsOOPConcepts\").iifeWindow()'",
-    "iife": "node -e 'require(\"./jsOOPConcepts\").iife()'",
-    "domLoaded": "node -e 'require(\"./jsOOPConcepts\").domLoaded()'",
-    "circleArea": "node -e 'require(\"./jsOOPConcepts\").circleArea()'"
+    "yakovChain": "node -e 'require(\"./jsOOPConcepts\").runYakovChain()'"
   },
   "repository": {
     "type": "git",
