--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "pretest": "eslint --ignore-path .gitignore .",
     "test": "jest --config jest.config.js",
-    "binarySearch": "node -e 'require(\"./binarySearch-4-6-19\").runBinarySearch()'",
-    "bubbleSort": "node -e 'require(\"./bubbleSort-4-6-19\").bubbleSort()'",
+    "binarySearch": "node -e 'require(\"./algorithms/binarySearch/binarySearch-4-6-19\").runBinarySearch()'",
+    "bubbleSort": "node -e 'require(\"./algorithms/bubbleSort/bubbleSort-4-6-19\").bubbleSort()'",
     "circleArea": "node -e 'require(\"./jsOOPConcepts\").circleArea()'",
     "curryMultiply": "node -e 'require(\"./jsOOPConcepts\").curryMultiply()'",
     "domLoaded": "node -e 'require(\"./jsOOPConcepts\").domLoaded()'",
     "generateBoilerPlate": "node -e 'require(\"./helpers/generateBoilerPlate\").generateDefaultBoilerPlate()'",
-    "heapSort": "node -e 'require(\"./heapSort1-4-9-19\").runHeapSort()'",
+    "heapSort": "node -e 'require(\"./algorithms/heapSort/heapSort1-4-9-19\").runHeapSort()'",
     "iife": "node -e 'require(\"./jsOOPConcepts\").iife()'",
     "iifeWindow": "node -e 'require(\"./jsOOPConcepts\").iifeWindow()'",
     "insertionSort": "node -e 'require(\"./insertionSort2-4-9-19\").runInsertionSort()'",
