--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pretest": "eslint --ignore-path .gitignore .",
     "test": "jest --config jest.config.js",
     "binarySearch": "node -e 'require(\"./algorithms/binarySearch/binarySearch\").runBinarySearch()'",
-    "bubbleSort": "node -e 'require(\"./algorithms/bubbleSort/bubbleSort-4-6-19\").bubbleSort()'",
+    "bubbleSort": "node -e 'require(\"./algorithms/bubbleSort/bubbleSort\").runBubbleSort()'",
     "circleArea": "node -e 'require(\"./jsOOPConcepts\").circleArea()'",
     "curryMultiply": "node -e 'require(\"./jsOOPConcepts\").curryMultiply()'",
     "domLoaded": "node -e 'require(\"./jsOOPConcepts\").domLoaded()'",
