--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "test": "jest --config jest.config.js",
     "binarySearch": "node -e 'require(\"./algorithms/binarySearch/binarySearch\").runBinarySearch()'",
     "bubbleSort": "node -e 'require(\"./algorithms/bubbleSort/bubbleSort\").runBubbleSort()'",
-    "circleArea": "node -e 'require(\"./jsOOPConcepts\").circleArea()'",
-    "curryMultiply": "node -e 'require(\"./jsOOPConcepts\").curryMultiply()'",
-    "domLoaded": "node -e 'require(\"./jsOOPConcepts\").domLoaded()'",
+    "circleArea": "node -e 'require(\"./misc/jsOOPConcepts\").circleArea()'",
+    "curryMultiply": "node -e 'require(\"./misc/jsOOPConcepts\").curryMultiply()'",
+    "domLoaded": "node -e 'require(\"./misc/jsOOPConcepts\").domLoaded()'",
     "generateBoilerPlate": "node -e 'require(\"./helpers/generateBoilerPlate\").generateDefaultBoilerPlate()'",
     "heapSort": "node -e 'require(\"./algorithms/heapSort/heapSort\").runHeapSort()'",
-    "iife": "node -e 'require(\"./jsOOPConcepts\").iife()'",
-    "iifeWindow": "node -e 'require(\"./jsOOPConcepts\").iifeWindow()'",
+    "iife": "node -e 'require(\"./misc/jsOOPConcepts\").iife()'",
+    "iifeWindow": "node -e 'require(\"./misc/jsOOPConcepts\").iifeWindow()'",
     "insertionSort1": "node -e 'require(\"./algorithms/insertionSort/insertionSort\").runInsertionSort1()'",
     "insertionSort2": "node -e 'require(\"./algorithms/insertionSort/insertionSort\").runInsertionSort2()'",
     "jumpToZero": "node -e 'require(\"./challenges/arrayJumping/arrayJumping\").runJumpToZero()'",
     "mergeSort": "node -e 'require(\"./algorithms/mergeSort/mergeSort\").runMergeSort()'",
-    "printHello": "node -e 'require(\"./jsOOPConcepts\").printHello()'",
+    "printHello": "node -e 'require(\"./misc/jsOOPConcepts\").printHello()'",
     "quickSort": "node -e 'require(\"./algorithms/quickSort/quickSort\").runQuickSort()'",
     "reverseWords": "node -e 'require(\"./challenges/reverseWords/reverseWords\").reverseWords()'",
     "selectionSort": "node -e 'require(\"./algorithms/selectionSort/selectionSort-4-6-19\").runSelectionSort()'",
-    "seniorAge": "node -e 'require(\"./jsOOPConcepts\").seniorAge()'",
-    "yakovChain": "node -e 'require(\"./jsOOPConcepts\").runYakovChain()'"
+    "seniorAge": "node -e 'require(\"./misc/jsOOPConcepts\").seniorAge()'",
+    "yakovChain": "node -e 'require(\"./misc/jsOOPConcepts\").runYakovChain()'"
   },
   "repository": {
     "type": "git",
